--- a/latin_squares.tex
+++ b/latin_squares.tex
@@ -177,7 +177,7 @@ $$n = 2m - 1 \Rightarrow MOLS(n) \geq 2$$
 
 \begin{construction}
 
-Pohubujeme sa v cyklickej grupe $(\mathbb{Z}_n, +) = \set{0, \ldots, n-1}$.
+Pohybujeme sa v cyklickej grupe $(\mathbb{Z}_n, +) = \set{0, \ldots, n-1}$.
 
 \begin{align*}
 A := (a_{ij}),~& a_{ij} := m (i+j)~(mod~n) \\
