--- a/main.tex
+++ b/main.tex
@@ -12,6 +12,7 @@
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
+\usepackage{faktor}
 
 %powerset
 \usepackage[mathscr]{euscript}
