--- a/block_designs.tex
+++ b/block_designs.tex
@@ -307,3 +307,72 @@ Ak $v$ je počet objektov STS, tak $v \equiv 1 \mod 6$ alebo $v \equiv 3 \mod 6$
 \begin{theorem_hard}{(Kirkman)}\\
 Ak $v$ spĺňa podmienky z vety \ref{th:sts_nec}, tak existuje STS s práve $v$ objektmi.
 \end{theorem_hard}
+
+\begin{theorem}{(Projektívne STS)\footnote{\TODO treba dôkaz?}\footnote{\TODO trochu mi nesedí: má to byť VP alebo pole (resp. zároveň)}}\\
+Nech $X := \left(\mathbb{Z}_2\right)^{n+1} - \set{\vec{0}}$ je množina vektorov vektorového priestoru dimenzie $n+1$ nad poľom $\mathbb{Z}_2$ bez nulového vektora a 
+$\mathcal{B} := \set{\set{\vec{x}, \vec{y}, \vec{z}} ~|~ \vec{x} + \vec{y} + \vec{z} = \vec{0}}$.
+Potom dvojica $(X, \mathcal{B})$ je STS. Alternatívne, množina priamok projektívnej roviny $PG(2, n)$ tvorí STS.
+\end{theorem}
+
+\begin{theorem}{(Afinné STS)\footnote{\TODO treba dôkaz?}}\\
+Nech $X := \left(\mathbb{Z}_3\right)$ je množina vektorov vektorového priestoru dimenzie $n$ nad poľom $\mathbb{Z}_3$. 
+Nech $\mathcal{B} := \set{\set{\vec{x}, \vec{y}, \vec{z}} ~|~ \vec{x} + \vec{y} + \vec{z} = \vec{0}}$. Potom 
+dvojica $(X, \mathcal{B})$ je STS.
+\end{theorem}
+
+\begin{theorem}{(Karteziansky súčin STS)}\\
+Nech dvojice $(X, \mathcal{B})$ a $(Y, \mathcal{C})$ sú STS. Potom dvojica $(X \times Y, \mathcal{D})$, kde:
+\begin{enumerate}
+    \item $y \in Y, \set{b_1, b_2, b_3} \in \mathcal{B} \Longrightarrow \set{(b_1, y), (b_2, y), (b_3, y)} \in \mathcal{D}$
+    \item $x \in X, \set{c_1, c_2, c_3} \in \mathcal{C} \Longrightarrow \set{(x, c_1), (x, c_2), (x, c_3)} \in \mathcal{D}$
+    \item $\set{b_1, b_2, b_3} \in \mathcal{B}, \set{c_1, c_2, c_3} \in \mathcal{C}, \phi \in S_3 \Longrightarrow 
+            \set{(b_1, c_{\phi(1)}), (b_2, c_{\phi(2)}), (b_3, c_{\phi(3)})} \in \mathcal{D}$ (kde $\phi$ je permutácia veľkosti $3$) 
+\end{enumerate}
+
+Potom $(X \times Y, \mathcal{D})$ je STS.
+\end{theorem}
+
+
+\begin{theorem}{(Vzťah STS a grupoidov)}\\
+Nech $(X, \mathcal{B})$ je STS. Potom množina $X$ s binárnou operáciou $\ast$, definovanou nasledovne:
+\begin{align*}
+    \forall \set{x,y,z} \in \mathcal{B}:\\
+    x\ast y = y \ast x = z\\ 
+    x \ast z = z \ast x = y\\ 
+    y\ast z = z \ast y = x\\
+    x \ast x = x
+\end{align*}
+
+je idempotentný komutatívny grupoid. 
+\end{theorem}
+
+
+\begin{theorem}{(($2v +1$)-konštrukcia STS)}\\
+Nech $(X, \mathcal{B})$ je STS a $(X', \mathcal{B}')$ je jeho disjunktná izomorfná kópia (t.j. $X \cap  X' = \varnothing$). Obraz prvku $x$ v tomto izomorfizme budeme značiť $x'$. 
+Nech prvok $\infty \notin X \cup X'$.
+Potom dvojica $(Y, \mathcal{C})$, kde $Y := X \cup X' \cup \set{\infty}$ a $\mathcal{C} := \mathcal{B} 
+\cup \set{\set{x, y', z'} ~|~ \set{x,y,z}\in \mathcal{B}} 
+\cup \set{\set{x, x', \infty} ~|~ x \in X}$, je STS.    
+\end{theorem}
+
+\TODO Paschovo prepnutie
+
+\TODO Wilson-Schreiberova konštrúkcia
+
+\TODO Boséova konštrukcia
+
+\TODO Skolemova konštrukcia
+
+\TODO Cyklické STS
+
+\TODO Symetrické $v_3$-konfigurácie
+
+\begin{hypothesis}
+Každý bezmostový kubický graf má 6 1-faktorov takých, že každá hrana grafu leží v práve 2 z nich.
+\end{hypothesis}
+
+
+
+
+
+
