--- a/block_designs.tex
+++ b/block_designs.tex
@@ -365,7 +365,7 @@ Potom dvojica $(Y, \mathcal{C})$, kde $Y := X \cup X' \cup \set{\infty}$ a $\mat
 
 \TODO Cyklické STS
 
-\TODO Symetrické $v_3$-konfigurácie
+\TODO Symetrické $v_3$-konfigurácie (čiastočné STS)
 
 \begin{hypothesis}
 Každý bezmostový kubický graf má 6 1-faktorov takých, že každá hrana grafu leží v práve 2 z nich.
