Added geometry package for broader text blocks.

--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,14 @@
 \usepackage{amssymb}
 \usepackage{faktor}
 
+\usepackage{geometry}
+\geometry{
+    a4paper,
+    total={150mm, 257mm},
+    left=30mm,
+    top=20mm,
+}
+
 %powerset
 \usepackage[mathscr]{euscript}
 \let\euscr\mathscr \let\mathscr\relax% just so we can load this and rsfs
