Another brick in the wall.

--- a/block_designs.tex
+++ b/block_designs.tex
@@ -384,8 +384,8 @@ Navyše, blokové plány typu $t-(v,k,1)$ budeme označovať ako $S(t,k,v)$.
 \end{definition}
 
 \begin{remark}
-Existencia $t-(v,k,\lambda)$-blokového plánu je ekvivalentná s existenciou rozkladu $t$-uniformných $\lambda$-násobných hypergrafov
-na klíky veľkosti $k$.
+Existencia $t-(v,k,\lambda)$-blokového plánu je ekvivalentná s existenciou rozkladu $t$-uniformného $\lambda$-násobného hypergrafu
+na hyperklíky veľkosti $k$.
 \end{remark}
 
 \begin{remark}
@@ -393,7 +393,7 @@ STS s $v$ prvkami môžeme značiť ako $S(2,3,v)$.
 \end{remark}
 
 \begin{definition}
-Blokové plány $S(3.4,v)$ voláme Steinerovské systémy štvoríc (angl. \emph{SQS})
+Blokové plány $S(3,4,v)$ voláme Steinerovské systémy štvoríc (angl. \emph{SQS})
 \end{definition}
 
 \begin{theorem_hard}
