--- a/latin_squares.tex
+++ b/latin_squares.tex
@@ -119,11 +119,10 @@ takú, že platí:
 \end{itemize}  
 
 Konjugáciou latinského štvorca voláme množinu trojíc $A'$, ktorá vznikne z $A$ permutáciou trojíc. Formálne,
-nech $\lambda \in S_3$ je permutácia veľkosti $3$, potom $A' = \set{ (a_{\lambda(1)}, a_{\lambda(2)}, a_{\lambda(3)} ) ~|~ (a_1, a_2, a_3) \in A}$.
+nech $\lambda \in S_3$ je permutácia veľkosti $3$, potom $$A' = \set{ (a_{\lambda(1)}, a_{\lambda(2)}, a_{\lambda(3)} ) ~|~ (a_1, a_2, a_3) \in A}$$
 
-Latinské štvorce, ktoré sa dajú jeden z druhého dostať pomocou konjugácie, voláme konjugované.
-
-Latinské štvorce, ktoré sa dajú jeden z druhého dostať pomocou konjugácie a izotopie, voláme paratopické.
+Latinské štvorce, ktoré sa dajú jeden z druhého dostať pomocou konjugácie, voláme \emph{konjugované}.
+Latinské štvorce, ktoré sa dajú jeden z druhého dostať pomocou konjugácie a izotopie, voláme \emph{paratopické}.
 
 \end{definition}
 
