Changed section name

--- a/matroids.tex
+++ b/matroids.tex
@@ -60,7 +60,7 @@ Navyše, ak množina $\mathcal{B}'$ spĺňa vyššie uvedené podmienky B1 a B2,
 
 \TODO priklady matroidov: cez vektory, cez grafy, cez signovane grafy
 
-\section{Dualita matroidov}
+\section{Dualita matroidov a triedy matroidov}
 
 \TODO veta o dualite
 
