--- a/matroids.tex
+++ b/matroids.tex
@@ -4,7 +4,7 @@
 
 \begin{definition}
 
-Dvojica $(X, \mathcal{N})$, kde $\mathcal{N} \in \powerset(X)$ a $\mathcal{N}$ je konečná, je matroid, ak sú splnené nasledujúce podmienky:
+Dvojica $(X, \mathcal{N})$, kde $\mathcal{N} \subseteq \powerset(X)$ a $\mathcal{N}$ je konečná, je matroid, ak sú splnené nasledujúce podmienky:
 \begin{enumerate}
     \item $\varnothing \in \mathcal{N}$
     \item $N \in \mathcal{N} \wedge N' \subseteq N \Longrightarrow N' \in \mathcal{N}$
